# simon-quantum-cryptanalysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: overview.md
docs/theory/: bernstein_vazirani.md  deutsch_jozsa.md  qft.md  simon.md  simon_attack_cbc_mac.md  simon_attack_feistel3.md
examples/: compare_algorithms.py  demo_cbc_mac_attack.py  demo_feistel3_attack.py
notebooks/: 01_deutsch_jozsa.ipynb  02_bernstein_vazirani.ipynb  03_qft.ipynb  04_simon.ipynb  05_simon_attack_feistel3.ipynb  06_simon_attack_cbc_mac.ipynb
scripts/: run_bernstein_vazirani.py  run_cbc_mac_forgery.py  run_deutsch_jozsa.py  run_feistel3_distinguisher.py  run_qft.py  run_simon.py
src/simon_qcrypto/: __init__.py
src/simon_qcrypto/algorithms/: __init__.py
src/simon_qcrypto/algorithms/bernstein_vazirani/: __init__.py  classical.py  experiments.py  oracles.py  quantum.py
src/simon_qcrypto/algorithms/deutsch_jozsa/: __init__.py  classical.py  experiments.py  oracles.py  quantum.py
src/simon_qcrypto/algorithms/qft/: __init__.py  classical.py  experiments.py  oracles.py  quantum.py
src/simon_qcrypto/attacks/: __init__.py
src/simon_qcrypto/common/: __init__.py  bitstrings.py  gf2.py  qiskit_runner.py  random_utils.py  results.py
src/simon_qcrypto/crypto/: __init__.py  cbc_mac.py  feistel3.py
tests/: test_common.py  test_scripts.py
tests/algorithms/: test_bernstein_vazirani.py  test_deutsch_jozsa.py  test_qft.py  test_simon.py
tests/attacks/: test_cbc_mac.py  test_feistel3.py
tests/crypto/: test_toy_constructions.py
(+13 files in other folders)
